# posture_detecting_cjs

./: .gitignore  README.md  arduino_code.ino  pyproject.toml  requirements.txt  setup_env.py  setup_env.sh
config/: config.toml  logging.toml
posture_guardian/: __init__.py  __main__.py  main.py
posture_guardian/core/: __init__.py  bus.py  config.py  constants.py  event_bus.py  main_loop.py
posture_guardian/data/: state.json
posture_guardian/processing/: __init__.py  calibration.py  monitor.py  posture_eval.py  posture_evaluator.py
posture_guardian/sensors/: __init__.py  pressure_pad.py  sensor_manager.py  webcam.py
posture_guardian/ui/: __init__.py  layout.py  sse_server.py  state.json  streamlit_app.py  streamlit_ui.py  style.css  temp_state.json  utils.py
posture_guardian/utils/: __init__.py  events.py  logger.py
